# llm-stock-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  endpoints.py
app/assets/: stock_analyzer_prompt.md
app/configs/: __init__.py  config.example.yaml  config.py
app/internal/analysis/: __init__.py  indicators.py
app/internal/llm/: chain.py
app/internal/shioaji/: stock_data.py
app/internal/yfinance/: __init__.py  stock_data.py
app/services/: __init__.py
app/services/analysis/: stock_trend_pipeline.py  trend_analysis.py
app/utils/: logger.py
tests/: __init__.py  test_config.py  test_indicators.py  test_stock_trend_pipeline.py  test_trend_analysis.py  test_yfinance_stock_data.py
